# graphbit-2

./: Cargo.toml
.github/workflows/: guardrail-builds.yml
core/: Cargo.toml
core/src/: lib.rs  workflow.rs
examples/guardrail_financial/: README.md  guardrail_financial_policy.json  run_guardrail_financial.py
examples/guardrail_phone/: guardrail_phone_policy.json  run_guardrail_phone.py
guardrail_ffi/: Cargo.toml  build.rs
guardrail_ffi/src/: lib.rs
python/python-src/graphbit/: __init__.py
python/src/: guardrail.rs  lib.rs
python/src/workflow/: executor.rs  result.rs
tests/rust_integration_tests/: full_workflow_tests.rs
tests/rust_unit_tests/: python_bindings_tests.rs  workflow_tests.rs
